<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_edit_text"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_edit"
            app:layout_constraintTop_toTopOf="@id/cl_edit" />

        <EditText
            android:id="@+id/et_userId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hint_user_id"
            android:inputType="number"
            android:maxLength="11"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_input_normal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_phone_number"
            app:layout_constraintStart_toEndOf="@+id/tv_phone_number" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_login_button"
        android:text="@string/btn_login"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
