<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/color_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:background="@android:color/transparent"
            android:text="@string/btn_confirm"
            android:textColor="@color/font_blue"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/btn_link"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:background="@color/color_transparent"
            android:padding="10dp"
            android:src="@drawable/ic_question_link" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_added_member"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_member"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_edit_text"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_search"
        app:layout_constraintTop_toBottomOf="@+id/ll_list">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_right"
            android:includeFontPadding="false"
            android:text="ID"
            android:textColor="@color/color_black"
            app:layout_constraintBaseline_toBaselineOf="@id/et_search_user"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_search_user"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/search_call_hint"
            android:imeOptions="actionSearch"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/color_black"
            android:textColorHint="@color/text_color_hint"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toBottomOf="@id/cl_edit"
            app:layout_constraintLeft_toRightOf="@id/tv_id" />

        <ImageView
            android:id="@+id/iv_clear_search"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/ic_clear_search"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/cl_edit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl_edit" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="76dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_btn_search"
        android:gravity="center"
        android:text="@string/app_search"
        android:textColor="@color/color_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/cl_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cl_edit" />

    <TextView
        android:id="@+id/line_seperate"
        android:layout_width="3dp"
        android:layout_height="12dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/bg_line_radius"
        app:layout_constraintLeft_toLeftOf="@id/cl_edit"
        app:layout_constraintTop_toBottomOf="@id/cl_edit" />

    <TextView
        android:id="@+id/tv_self_userid"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/self_userId"
        android:textColor="#333333"
        android:textSize="@dimen/text_size_middle"
        app:layout_constraintStart_toEndOf="@id/line_seperate"
        app:layout_constraintTop_toBottomOf="@id/cl_edit" />

    <LinearLayout
        android:id="@+id/ll_contract"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/tv_search"
        app:layout_constraintStart_toStartOf="@+id/cl_edit"
        app:layout_constraintTop_toBottomOf="@+id/tv_self_userid"
        tools:visibility="visible">

        <com.tencent.qcloud.tuikit.tuicallkit.widget.RoundCornerImageView
            android:id="@+id/img_avatar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/ic_avatar"
            app:radius="15dp" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_large" />

        <Button
            android:id="@+id/btn_start_call"
            android:layout_width="56dp"
            android:layout_height="26dp"
            android:background="@drawable/bg_btn_search"
            android:gravity="center"
            android:text="@string/app_start_call"
            android:textAllCaps="false"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_edit">

        <ImageView
            android:id="@+id/iv_contacts_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_contacts_search"
            app:layout_constraintBottom_toBottomOf="@id/cl_tips"
            app:layout_constraintLeft_toLeftOf="@id/cl_tips"
            app:layout_constraintRight_toRightOf="@id/cl_tips"
            app:layout_constraintTop_toTopOf="@id/cl_tips" />

        <TextView
            android:id="@+id/tv_contacts_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="10dp"
            android:text="@string/tips_search"
            android:textColor="@color/color_input_normal"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/cl_tips"
            app:layout_constraintRight_toRightOf="@id/cl_tips"
            app:layout_constraintTop_toBottomOf="@id/iv_contacts_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>